force-app/main/default/objects/Invoice_Line_Item__c/fields/Gross_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Gross_Line_Total__c</fullName>
    <formula>Net_Line_Total__c * (1 +  Tax_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>