force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_Type</valueSetName>
    </valueSet>
</CustomField>