force-app/main/default/objects/Invoice_Line_Item__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Invoive Line Items</relationshipLabel>
    <relationshipName>Invoive_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>